# vasteroids

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  index.js  index.ts  package-lock.json  package.json  webpack.config.js
addons-ts/: Asteroid.ts  GameTypes.ts  WorldSim.ts
client/: ClientPacket.ts  index.html
client/css/: main.css
client/glsl/: afterimage.frag  afteroverlay.frag  vectordraw.frag  vectordraw.vert
client/html/: drawtest.html
client/ts/: drawtest.ts  index.ts  tsconfig.json
client/ts/gl/: ManagedBuffer.ts  VectorCanvas.ts  VectorMesh2D.ts
client/ts/input/: InputManager.ts  KeyInputManager.ts  MouseEventManager.ts  TouchInputManager.ts
client/ts/instance/: AsteroidColliderJS.ts  ClientBiomeMap.ts  GameStateManager.ts  (+2 more)
cpp/include/: Asteroid.hpp  AsteroidCollider.hpp  AsteroidGenerator.hpp  Biome.hpp  BiomeInfo.hpp  Collision.hpp  GameTypes.hpp  Point2D.hpp  Projectile.hpp  Ship.hpp
cpp/src/: Asteroid.cpp  AsteroidCollider.cpp  AsteroidGenerator.cpp  Biome.cpp  BiomeManager.cpp  GameTypes.cpp  Point2D.cpp  Projectile.cpp  Ship.cpp
cpp/test/: BiomeTreeTest.cpp  ChunkTest.cpp  napitest.hpp
instances/: Asteroid.ts  Biome.ts  Collision.ts  CollisionLocal.ts  GameTypes.ts  Projectile.ts  Ship.ts
packet/: BiomePacket.ts  BiomePacketDecoder.ts  DataStream.ts  ServerPacketDecoder.ts
server/: BiMap.ts  ClientPacket.ts  ConnectionPacket.ts  IDGen.ts  ServerPacket.ts  SocketManager.ts  WorldSim.ts
test/: asteroidstest.ts  biomepackettest.ts  biometest.ts  chunktest.ts  collidertest.ts  serverpackettest.ts  simtest.ts  vectormeshtest.ts
(+22 files in other folders)
